--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "prefix-css": "postcss --use autoprefixer -b 'defaults' css/style.comp.css -o css/style.prefix.css",
     "compress-css": "node-sass css/style.prefix.css ./style.css --output-style compressed",
     "start": "node-sass sass/style.scss ./style.css --watch --output-style compressed",
-    "build": "npm-run-all compile-sass prefix-css compress-css"
+    "build": "npm-run-all compile-sass prefix-css compress-css",
+    "prettier": "prettier --config ./.prettierrc.json --write '**/*.{html,scss,js,json,yml,md,php}'"
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
+    "@prettier/plugin-php": "^0.11.2",
     "autoprefixer": "^9.7.2",
     "cpx": "^1.5.0",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.3"
+    "postcss-cli": "^6.1.3",
+    "prettier": "^1.19.1"
   },
   "engines": {
     "node": ">=10.15.0",
