feat: new structure

--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "prefix-css": "postcss --use autoprefixer -b 'defaults' css/style.comp.css -o css/style.prefix.css",
     "compress-css": "node-sass css/style.prefix.css ./style.css --output-style compressed",
     "start": "node-sass sass/style.scss ./style.css --watch --output-style compressed",
-    "build": "npm-run-all compile-sass prefix-css compress-css"
+    "build": "npm-run-all compile-sass prefix-css compress-css",
+    "prettier": "prettier --write '**/*.{html,scss,js,json,yml,md,php}'"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^9.6.5",
+    "@prettier/plugin-php": "^0.12.0",
+    "autoprefixer": "^9.7.4",
     "cpx": "^1.5.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.3"
+    "postcss-cli": "^7.1.0",
+    "prettier": "^1.19.1"
   },
   "engines": {
     "node": ">=10.15.0",
@@ -29,8 +35,5 @@
   },
   "browserslist": [
     "defaults"
-  ],
-  "dependencies": {
-    "normalize.css": "^8.0.1"
-  }
+  ]
 }
