fix: style issues

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "copy-fontawesome": "cpx node_modules/@fortawesome/fontawesome-free/scss/**/* fonts/fontawesome/scss/ && cpx node_modules/@fortawesome/fontawesome-free/webfonts/**/* fonts/fontawesome/webfonts",
     "watch-sass": "node-sass sass/style.scss css/style.css --watch",
     "compile-sass": "node-sass sass/style.scss css/style.comp.css",
-    "prefix-css": "postcss --use autoprefixer -b 'defaults' css/style.comp.css -o css/style.prefix.css",
+    "prefix-css": "AUTOPREFIXER_GRID=autoplace postcss --use autoprefixer -b 'defaults' css/style.comp.css -o css/style.prefix.css",
     "compress-css": "node-sass css/style.prefix.css ./style.css --output-style compressed",
     "start": "npm run copy-fontawesome && node-sass sass/style.scss ./style.css --watch --output-style compressed",
     "build": "npm-run-all compile-sass prefix-css compress-css"
