--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "sass/style.scss",
   "scripts": {
     "clean": "rm -rf css/** node_modules package-lock.json",
-    "clean:install": "npm-run-all clean install build",
+    "clean:install": "npm run clean && npm i && npm run build",
     "copy-fontawesome": "cpx node_modules/@fortawesome/fontawesome-free/scss/**/* fonts/fontawesome/scss/ && cpx node_modules/@fortawesome/fontawesome-free/webfonts/**/* fonts/fontawesome/webfonts",
     "watch-sass": "node-sass sass/style.scss css/style.css --watch",
     "compile-sass": "node-sass sass/style.scss css/style.comp.css",
@@ -18,11 +18,11 @@
     "build": "npm-run-all compile-sass prefix-css compress-css"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/fontawesome-free": "^5.13.1",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.0",
+    "autoprefixer": "^9.8.2",
     "cpx": "^1.5.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
