--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.1",
+    "animate.css": "^4.1.0",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
